ros2_ws/log/build_2023-05-03_19-40-43/bc_wreg/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/ns/matlab/inference/ros2_ws/install/bc_wreg/lib/python3.10/site-packages/bc_wreg/bc_inference.py", line 6
    from std_msgs.msg import 
                             ^
SyntaxError: invalid syntax

